Migrate tests to JUnit5 (#103)